# third-party-api-clients

./: .gitignore  .gitmodules  CODEOWNERS  Cargo.toml  Makefile  README.md  flake.nix  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: cargo-build.yml  cargo-clippy.yml  cargo-test.yml
commonroom/: Cargo.toml  README.md  commonroom-api.rs.patch.json
commonroom/src/: activities.rs  beta.rs  lib.rs  members.rs  scim.rs  segments.rs  types.rs
discourse/: Cargo.toml  README.md  discourse-api.rs.patch.json
discourse/src/: backups.rs  badges.rs  categories.rs  (+14 more)
front/: Cargo.toml  README.md  front-api.rs.patch.json
gusto/: Cargo.toml  README.md  gusto-api.rs.patch.json
hubspot-contacts/: Cargo.toml  README.md  hubspot-contacts.rs.patch.json
hubspot-tickets/: Cargo.toml  README.md  hubspot-tickets.rs.patch.json
hubspot-users/: Cargo.toml  README.md  hubspot-users.rs.patch.json
mailchimp/: Cargo.toml  README.md
pagerduty/: Cargo.toml  README.md
pagerduty/src/: lib.rs  tests.rs  types.rs
ramp/: Cargo.toml  README.md  ramp-api.rs.patch.json
remote/: Cargo.toml  README.md  remote-api.rs.patch.json
rippling/: Cargo.toml  README.md  rippling-api.rs.patch.json
rippling-base/: Cargo.toml  README.md  rippling-base-api.rs.patch.json
rippling-beta/: Cargo.toml  README.md  rippling-beta-api.rs.patch.json
specs/: commonroom.json  discourse.json  front.json  gusto.v1.yaml  hubspot-contacts.json  hubspot-tickets.json  pagerduty.json  ramp.json  remote.json  rippling-beta.yaml  rippling.yaml  vercel.json
twilio/: Cargo.toml  README.md  twilio-api.rs.patch.json
vercel/: Cargo.toml  README.md  vercel-api.rs.patch.json
zendesk/: Cargo.toml
(+176 files in other folders)
