[package]
name = "pagerduty-api"
description = "An API client for the Pagerduty API"
version = "0.1.0"
authors = ["Jess Frazelle <jess@kittycad.io>"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
parse-display = "^0.10.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
reqwest-middleware = "0.4.0"
reqwest-retry = "0.7.0"
reqwest-tracing = { version = "0.3.0", features = ["opentelemetry_0_17"] }
schemars = { version = "0.8", features = ["chrono", "uuid1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1", features = ["full", "time"] }
tracing = "^0.1"

[dev-dependencies]
pretty_assertions = "1"
